// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<ds-field>
  <label for="<removed>">
    Beskriv bekymringen din
  </label>
  <textarea
    id="<removed>"
    autocomplete="off"
    rows="4"
    style="<removed>"
  >
  </textarea>
</ds-field>
<button
  data-variant="secondary"
  type="button"
>
  Tøm feltet
</button>
`;

exports[`Disabled 1`] = `
<ds-field>
  <label for="<removed>">
    Disabled Textarea
  </label>
  <textarea
    id="<removed>"
    disabled
    autocomplete="off"
    style="<removed>"
  >
  </textarea>
</ds-field>
`;

exports[`Focused 1`] = `
<ds-field>
  <label for="<removed>">
    Label
  </label>
  <textarea
    rows="3"
    cols="20"
    id="<removed>"
    autocomplete="off"
    style="<removed>"
  >
  </textarea>
</ds-field>
`;

exports[`Full Width 1`] = `
<ds-field>
  <label for="<removed>">
    Beskriv bekymringen din
  </label>
  <textarea
    id="<removed>"
    autocomplete="off"
    style="<removed>"
  >
  </textarea>
</ds-field>
`;

exports[`Preview 1`] = `
<ds-field>
  <label for="<removed>">
    Label
  </label>
  <textarea
    rows="3"
    cols="20"
    id="<removed>"
    autocomplete="off"
    style="<removed>"
  >
  </textarea>
</ds-field>
`;

exports[`Read Only 1`] = `
<ds-field>
  <label for="<removed>">
    Read-Only Textarea
  </label>
  <textarea
    id="<removed>"
    readonly
    autocomplete="off"
    style="<removed>"
  >
  </textarea>
</ds-field>
`;
